--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,65 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* body {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.left-links, .right-links {
+  display: flex;
+  gap: 20px;
+  
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  
+  padding: 10px;
+}
+.footer {
+  background-color: #eeeeee;
+} */
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+ul {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  
+}
+a {
+  color: #666;
+  text-decoration: none;
+}
+.footer {
+  background-color: #eeeeee
+}
+button {
+  padding: 8px 10px;
+}
