--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,53 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1;
+  display: flex;
+}
+.sidebar {
+  display: flex;
+  width: 300px;
+  flex-shrink: 0;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 16px;
+}
+.content-card {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 32px;
+}
+.card {
+  height: auto;
+  width: 300px;
+  padding: 10px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+.header {
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
